# 24b-emb-expert-2-pedronery07

./: CMakeLists.txt
main/: CMakeLists.txt  main.c  server_common.c
